--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -124,6 +124,8 @@ import { Schema } from "astro-seo-schema"
         line-height: 1.2;
         margin-bottom: 2rem;
         color: var(--highlight);
+        text-decoration: underline 0.3rem var(--light-d);
+        text-underline-offset: 0.7rem;
     }
 
     .intro p {
