--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -370,11 +370,19 @@ const sectors = await getCollection("sectors");
         border: 0.1rem solid var(--light);
     }
 
+    .subsets > div {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        width: max-content;
+    }
+
     .subsets > div a {
         padding: 0.6rem;
-        white-space: nowrap;
+        /* white-space: nowrap; */
         display: block;
         width: 100%;
+        max-width: 75vw;
     }
 
     header nav .subnav {
@@ -395,12 +403,6 @@ const sectors = await getCollection("sectors");
 
     .subsets.visible {
         display: flex;
-    }
-
-    .subsets > div {
-        display: flex;
-        flex-direction: column;
-        align-items: end;
     }
 
     .subsets .heading {
@@ -547,7 +549,7 @@ const sectors = await getCollection("sectors");
         .subnav > .flex > a:not(.cta) {
             transition: background-color 0.3s ease;
             padding: 0.8rem clamp(0.6rem, 0.8vw, 1.6rem);
-            text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 30%);
+            text-shadow: 0 0.1rem 0rem rgb(47 54 60 / 30%);
         }
 
         header nav > .ctnr > a:not(.cta):hover,
@@ -597,6 +599,7 @@ const sectors = await getCollection("sectors");
 
         .subsets > div a {
             transition: background-color 0.3s ease;
+            max-width: 28rem;
         }
 
         .subsets > div a:hover {
@@ -614,7 +617,13 @@ const sectors = await getCollection("sectors");
         }
 
         .subsets > div {
-            align-items: start;
+            display: grid;
+            grid-auto-flow: column;
+            grid-template-rows: repeat(10, auto);
+            height: min-content;
+            grid-gap: 0 2rem;
+            max-width: 100rem;
+            overflow: auto;
         }
     }
 </style>
