--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -46,7 +46,7 @@ import { Schema } from "astro-seo-schema"
                 <div class="heading_ctnr default_bg">
                     <h1>Commercial & Office Cleaning Services</h1>
 
-					<p>Discover the breadth and depth of our cleaning expertise at The Clean Network. We offer a comprehensive range of interior and exterior commercial and office cleaning services in London, tailor-made to meet your unique needs and exceed your expectations.</p>
+					<p><strong>Discover the breadth and depth of our cleaning expertise at The Clean Network.</strong> We offer a comprehensive range of interior and exterior commercial and office <strong>cleaning services in London</strong>, tailor-made to meet your unique needs and exceed your expectations.</p>
                 </div>
                 
                 <div class="division" id="indoor">
@@ -70,14 +70,14 @@ import { Schema } from "astro-seo-schema"
     
                                                 <p class="description">{services.data.description}</p>
     
-                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`}><span></span> More about <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Services</span></a>
+                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}><span></span></a>
 
                                                 <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
                                             </div>
                                             
-                                            <div class="image">
+                                            <a href={`/services/${services.slug}`} class="image" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}>
                                                 <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`}/>
-                                            </div>
+                                            </a>
                                         </div>
                                     </section>
                                 ): null}
