--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -8,13 +8,14 @@
 
 .intro .cover {
     width: 100%;
-    height: clamp(5rem,85vmin,50rem);
+    height: clamp(5rem,115vmin,62rem);
+    max-height: 80vh;
     background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    /* margin-bottom: clamp(2rem,6vmin,5rem); */
     background-color: var(--light-a);
+    box-shadow: inset 0 -16rem 10rem -16rem var(--primary-b);
 }
 
 .intro .content {
@@ -23,25 +24,26 @@
 }
 
 article {
-    width: clamp(9rem, 85vw, 80rem);
+    width: clamp(9rem, 91vw, 80rem);
     margin-inline: auto;
+    margin-bottom: clamp(4rem,18vw,10rem);
+    margin-top: calc(clamp(10rem, 55vw, 38rem) * -1);
+    background-color: rgb(248 248 255 / 80%);
+    backdrop-filter: blur(0.5rem);
+    border-radius: 1.2rem;
+    padding: 4rem;
+    box-sizing: border-box;
+    border: 0.1rem solid var(--light-a);
+    box-shadow: 0 1rem 2rem -1rem var(--light-b);
 }
 
-.intro h1 {
-    font-size: clamp(2rem,8vw,5rem);
-    margin-bottom: -4rem;
-    /* margin-top: -13%; */
-    background-color: rgb(248 248 255 / 80%);
-    text-align: center;
+article h1 {
+    font-size: clamp(2rem,10vw,5rem);
     border-radius: 0.6rem;
-    padding: 1rem 3rem;
-    backdrop-filter: blur(0.4rem);
     color: var(--dark-a);
-    transform: translateY(-80%);
-    border: 0.2rem solid var(--light-a);
     line-height: 1;
-    width: fit-content;
-    margin-inline:auto;
+    margin-inline: auto;
+    margin-bottom: 2rem;
 }
 
 .intro p {
@@ -91,10 +93,6 @@ article {
     -o-transition: background-color 0.1s ease;
 }
 
-article {
-    margin-bottom:clamp(4rem,18vw,10rem);
-}
-
 article p {
     font-size: clamp(1.5rem,3.9vmin,1.75rem);
     margin-bottom: 1rem;
@@ -109,7 +107,7 @@ article .cta {
     display: block;
     text-align: center;
     padding: 1.2rem;
-    background-color: rgb(227 227 255 / 70%);
+    background-color: var(--light-a);
     color: var(--primary-a);
     font-size: 2rem;
     border-radius: 0.3rem;
@@ -118,7 +116,6 @@ article .cta {
     font-weight: 600;
     border: 0.1rem solid var(--light-d);
     margin-top: 3rem;
-    backdrop-filter: blur(0.5rem);
     transition: background-color 0.4s ease;
     -webkit-transition: background-color 0.4s ease;
     -moz-transition: background-color 0.4s ease;
@@ -127,7 +124,7 @@ article .cta {
 }
 
 article .cta:hover {
-    background-color: rgb(245 245 255 / 80%);
+    background-color: var(--light-c);
     transition: background-color 0.1s ease;
     -webkit-transition: background-color 0.1s ease;
     -moz-transition: background-color 0.1s ease;
