--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -378,7 +378,7 @@ const sectors = await getCollection("sectors");
     }
 
     .subsets > div a {
-        padding: 0.6rem;
+        padding: 0.5rem;
         /* white-space: nowrap; */
         display: block;
         width: 100%;
@@ -600,6 +600,7 @@ const sectors = await getCollection("sectors");
         .subsets > div a {
             transition: background-color 0.3s ease;
             max-width: 28rem;
+            line-height: 1.3;
         }
 
         .subsets > div a:hover {
