--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -110,14 +110,14 @@ import { Schema } from "astro-seo-schema"
     
                                                 <p class="description">{services.data.description}</p>
     
-                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`}><span></span> About <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Service</span></a>
+                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}><span></span></a>
 
                                                 <a href="/#contact" class="quote" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
                                             </div>
                                             
-                                            <div class="image">
+                                            <a href={`/services/${services.slug}`} class="image" aria-label={`Read more about ${services.data.title}`} title={`Read more about ${services.data.title} Cleaning Services`}>
                                                 <img src={services.data.image} loading="lazy" alt={`Photo of ${services.data.title} cleaning service`}/>
-                                            </div>
+                                            </a>
                                         </div>
                                     </section>
                                 ): null}
