--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,11 +21,18 @@ import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
     })(window,document,'script','dataLayer','GTM-WM63TJ4W');</script>
 <!-- End Google Tag Manager -->
 
-<style>
+<!-- <style>
     html.sr .reveal {
         visibility: hidden;
     }
-</style>
+
+    .subsets {
+        opacity: 0;
+        visibility: hidden;
+        transform: translate(0%,calc(100% - 2rem));
+        display: none;
+    }
+</style> -->
 
 <script src="../scripts/scrollreveal.min.js"></script>
 
