--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -55,7 +55,7 @@ import ContactBox from "./ContactBox.astro";
     }
 
     footer > .ctnr {
-        width: var(--mobile-width);
+        width: var(--base-width);
         margin-inline: auto;
         display: flex;
         flex-flow: row wrap;
