--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -106,7 +106,7 @@ const { description } = Astro.props;
     section .content {
         padding: clamp(3rem,10vmin,8rem) 0 clamp(3rem,12vmin,8rem);
         margin-inline: auto;
-        width:var(--mobile-width);
+        width:var(--base-width);
         display: block;
         font-size: clamp(1.5rem,3.8vmin,1.8rem);
         color: var(--grey);
