--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -21,13 +21,15 @@ const { description } = Astro.props;
 
         <main>
             <div class="heading_ctnr default_bg">
-                <h1>Our Locations</h1>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
-                
-                <!-- <div class="component_ctnr">
-                    <MapSwitch/>
-                </div> -->
+                <div class="content">
+                    <h1>Our Locations</h1>
+    
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
+                    
+                    <!-- <div class="component_ctnr">
+                        <MapSwitch/>
+                    </div> -->
+                </div>
             </div>
 
             <div class="map">
