--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -198,7 +198,7 @@ const sectors = await getCollection("sectors");
 
     .stripe > .ctnr {
         height: 2.5rem;
-        width: var(--mobile-width);
+        width: var(--base-width);
         margin-inline: auto;
         display: flex;
         align-items: center;
@@ -221,7 +221,7 @@ const sectors = await getCollection("sectors");
     }
 
     header > .ctnr {
-        width: var(--mobile-width);
+        width: var(--base-width);
         margin-inline: auto;
         display: flex;
         height: 100%;
@@ -284,7 +284,7 @@ const sectors = await getCollection("sectors");
     }
 
     header nav {
-        width: calc(100% - (100% - var(--mobile-width)) / 2);
+        width: calc(100% - (100% - var(--base-width)) / 2);
         background-color: rgb(230 238 255 / 94%);
         font-size: clamp(1.6rem,5vw,2.2rem);
         backdrop-filter: blur(0.5rem);
@@ -367,7 +367,8 @@ const sectors = await getCollection("sectors");
         gap: clamp(2rem,2vw,4rem);
         margin: 0rem 0 3rem;
         border-radius: 0.9rem;
-        border: 0.1rem solid var(--light);
+        /* border: 0.1rem solid var(--light); */
+        align-items: end;
     }
 
     .subsets > div {
@@ -398,7 +399,8 @@ const sectors = await getCollection("sectors");
         margin: 0;
         background-color: var(--light);
         flex: 1;
-        border: 0.1rem solid var(--light-a);
+        border-bottom: 0.1rem solid var(--light);
+        width: 100%;
     }
 
     .subsets.visible {
@@ -579,6 +581,12 @@ const sectors = await getCollection("sectors");
             opacity: 0;
             visibility: hidden;
             border: 0.1rem solid var(--light-a);
+            align-items: stretch;
+        }
+
+        .subsets > hr {
+            border-bottom: unset;
+            border-right: 0.2rem solid var(--light-a);
         }
 
         .subsets::before {
