--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -349,7 +349,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.intro > .ctnr .content {
-		width: var(--mobile-width);
+		width: var(--base-width);
 		margin: clamp(2rem, 10vw, 6rem) auto 0;
 		display: flex;
 		flex-direction: column;
@@ -387,7 +387,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.panel.services, .panel.sectors {
-		width: clamp(9rem,91vw,275rem);
+    	width: clamp(9rem,95vw,275rem);
 		margin-inline: auto;
 		border-radius: 1.2rem;
     	margin-bottom: clamp(2rem, 4vw, 4rem);
@@ -420,6 +420,7 @@ const testimonials = await getCollection("testimonials");
 		width: fit-content;
 		text-underline-offset: 0.7rem;
 		line-height: 1.3;
+    	margin-top: 0.6rem;
 	}
 
 	.panel .cta:hover {
@@ -432,6 +433,7 @@ const testimonials = await getCollection("testimonials");
 		padding: clamp(3rem, 10vmin, 6rem) 0;
 		color: var(--light);
     	font-size: clamp(1.5rem,4vmin,2.2rem);
+    	background-image: linear-gradient(340deg, #ff9162, transparent 38%);
 	}
 
 	.text_block b, .text_block strong {
@@ -440,7 +442,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.intro .text_block > .ctnr {
-		width: var(--mobile-width);
+		width: var(--base-width);
 		margin-inline: auto;
 	}
 
@@ -478,7 +480,7 @@ const testimonials = await getCollection("testimonials");
 		flex-direction: row;
 		gap: clamp(2rem, 9vw, 5rem);
 		overflow: auto;
-		padding: 0 calc((100% - var(--mobile-width)) / 2) clamp(2rem,4vw,3.5rem);
+		padding: 0 calc((100% - var(--base-width)) / 2) clamp(2rem,4vw,3.5rem);
 	}
 
 	.clients .content img, .clients .content picture {
@@ -590,7 +592,7 @@ const testimonials = await getCollection("testimonials");
 		position:absolute;
 		top:0;
 		bottom:0;
-		width: clamp(2rem,12vw, calc((100vw - var(--mobile-width)) / 2));
+		width: clamp(2rem,12vw, calc((100vw - var(--base-width)) / 2));
 		opacity: 0.8;
     	z-index: 1;
 	}
@@ -627,7 +629,7 @@ const testimonials = await getCollection("testimonials");
 	.slider {
 		display: block;
 		gap:1rem;
-		max-width: var(--mobile-width);
+		max-width: var(--base-width);
 	}
 
 	.quotes {
@@ -815,7 +817,7 @@ const testimonials = await getCollection("testimonials");
 	}
 
 	.rates > .ctnr {
-		width: var(--mobile-width);
+		width: var(--base-width);
 		margin-inline: auto;
 		text-align: center;
 		display: flex;
@@ -911,7 +913,7 @@ const testimonials = await getCollection("testimonials");
 	@media screen and (min-width: 850px) {
 		.intro > .ctnr {
 			flex-direction: row;
-			width: calc(100% - (100% - var(--mobile-width)) / 2);
+			width: calc(100% - (100% - var(--base-width)) / 2);
 			margin-left: auto;
 			gap: 0;
     		align-items: center;
