--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -45,9 +45,11 @@ import { Schema } from "astro-seo-schema"
         <main>
             <div class="ctnr">
                 <div class="heading_ctnr default_bg">
-                    <h1>Commercial & Office Cleaning Services in London</h1>
-
-					<p><strong>The Clean Network</strong> is here for all your commercial and office cleaning needs in London. We take pride in our range of professional cleaning services, all <b>tailored to provide a clean, healthy, and productive work environment that leaves a lasting impression</b>.</p>
+                    <div class="content">
+                        <h1>Commercial & Office Cleaning Services in London</h1>
+    
+                        <p><strong>The Clean Network</strong> is here for all your commercial and office cleaning needs in London. We take pride in our range of professional cleaning services, all <b>tailored to provide a clean, healthy, and productive work environment that leaves a lasting impression</b>.</p>
+                    </div>
                 </div>
                 
                 <div class="division" id="indoor">
@@ -61,12 +63,14 @@ import { Schema } from "astro-seo-schema"
                                                 <h3>
                                                     <a href={`/sectors/${sectors.slug}`} aria-label={`Read more about ${sectors.data.title}`}>
                                                         {sectors.data.title}
+    
+                                                        <span class="arrow">
+                                                            <span></span>
+                                                        </span>
                                                     </a>
                                                 </h3>
     
                                                 <p class="description">{sectors.data.description}</p>
-    
-                                                <a href={`/sectors/${sectors.slug}`} class="cta" aria-label={`Read more about ${sectors.data.title}`}  title={`Read more about ${sectors.data.title}`}><span></span></a>
 
                                                 <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
                                             </div>
