--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -23,7 +23,7 @@ import { Schema } from "astro-seo-schema"
 <SubpageLayout {...services.data}>
     <section class="intro">
 
-        <a href={`/services/#${(services.data.title).toLowerCase().replace(/\s+/g, '-')}`} class="back">Back to services</a>
+        <a href={`/services/#${(services.data.title).toLowerCase().replace(/\s+/g, '-')}`} class="back">Other services</a>
 
         <div class="cover" style={`background-image: url(${services.data.image});`}></div>
 
@@ -40,7 +40,7 @@ import { Schema } from "astro-seo-schema"
 
         <a href="/contact/" class="cta" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
 
-        <a href={`/services/#${(services.data.title).toLowerCase().replace(/\s+/g, '-')}`} class="back">Back to services</a>
+        <a href={`/services/#${(services.data.title).toLowerCase().replace(/\s+/g, '-')}`} class="back">Other services</a>
     </article>
 
     <ContactSection />
