--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -14,36 +14,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-color: var(--light-a);
+    background-color: var(--light-d);
     box-shadow: inset 0 -16rem 10rem -16rem var(--primary-b);
 }
 
 .intro .content {
-    width: clamp(9rem, 85vw, 90rem);
+    width: clamp(9rem, 89vw, 90rem);
     margin-inline: auto;
-}
-
-article {
-    width: clamp(9rem, 91vw, 80rem);
-    margin-inline: auto;
-    margin-bottom: clamp(4rem,18vw,10rem);
-    margin-top: calc(clamp(10rem, 55vw, 38rem) * -1);
-    background-color: rgb(248 248 255 / 80%);
-    backdrop-filter: blur(0.5rem);
-    border-radius: 1.2rem;
-    padding: 4rem;
-    box-sizing: border-box;
-    border: 0.1rem solid var(--light-a);
-    box-shadow: 0 1rem 2rem -1rem var(--light-b);
-}
-
-article h1 {
-    font-size: clamp(2rem,7vw,5rem);
-    border-radius: 0.6rem;
-    color: var(--dark-a);
-    line-height: 1.2;
-    margin-inline: auto;
-    margin-bottom: 2rem;
 }
 
 .intro p {
@@ -56,7 +33,7 @@ article h1 {
 }
 
 .intro hr {
-    width: clamp(9rem,85vw,80rem);
+    width: clamp(9rem,89vw,80rem);
     margin-inline: auto;
     margin-block: clamp(2rem,6vmin,3rem);
     height: 0.1rem;
@@ -93,8 +70,44 @@ article h1 {
     -o-transition: background-color 0.1s ease;
 }
 
-article p {
+article {
     font-size: clamp(1.5rem,3.9vmin,1.75rem);
+    width: clamp(9rem, 91vw, 80rem);
+    margin-inline: auto;
+    margin-bottom: clamp(4rem,18vw,10rem);
+    margin-top: calc(clamp(10rem, 55vw, 45rem) * -1);
+    background-color: rgb(248 248 255 / 80%);
+    backdrop-filter: blur(0.5rem);
+    border-radius: 1.2rem;
+    padding: clamp(3rem, 5vmin, 4rem) clamp(2.5rem, 6vmin, 5rem);
+    box-sizing: border-box;
+    border: 0.1rem solid var(--light-a);
+    box-shadow: 0 1rem 2rem -1rem var(--light-b);
+}
+
+article ul, article ol {
+    padding: 0 0 0 4rem;
+    margin-block: 3rem;
+}
+
+article li {
+    margin-bottom: 1rem;
+}
+
+article li::marker {
+    font-weight: 500;
+}
+
+article h1 {
+    font-size: clamp(2rem,8vw,5rem);
+    border-radius: 0.6rem;
+    color: var(--dark-a);
+    line-height: 1.2;
+    margin-inline: auto;
+    margin-bottom: 1.2rem;
+}
+
+article p {
     margin-bottom: 1rem;
     line-height: 1.65;
 }
@@ -145,7 +158,7 @@ article a.back {
     margin-inline: auto;
 }
 
-article a.back::before {
+article a.back::before, .intro a.back::before {
     content: "";
     display: inline-block;
     border-bottom: 0.4rem solid var(--light-b);
@@ -167,7 +180,7 @@ article a.back:hover {
 article img {
     margin: clamp(3rem, 7vmin, 4rem) auto;
     border-radius: 0.5rem;
-    width: clamp(9rem,85vw,75rem);
+    width: clamp(9rem,89vw,75rem);
     display: block;
 }
 
