--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -24,7 +24,7 @@ const { description } = Astro.props;
                 <div class="content">
                     <h1>Our Locations</h1>
     
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestias quo id molestiae fuga esse nemo perspiciatis.</p>
+                    <p>Centrally located in the <b>City of London</b>, we're just a call away from providing your space with the professional cleaning service it deserves. <b>We’d be happy to come over and provide you with a quote.</b> Or feel free to drop by our office too.</p>
                     
                     <!-- <div class="component_ctnr">
                         <MapSwitch/>
