--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -38,7 +38,7 @@ import { Schema } from "astro-seo-schema"
 
         <Content />
 
-        <a href="/contact/" class="cta" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
+        <a href="/contact/" class="main cta" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
 
         <a href={`/sectors/#${(sectors.data.title).toLowerCase().replace(/\s+/g, '-')}`} class="back">Other sectors</a>
     </article>
