--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -153,7 +153,7 @@ const sectors = await getCollection("sectors");
 
                 <a href="/contact/">Contact</a>
 
-                <a href="/contact/" class="cta">Get a Free Quote</a>
+                <a href="/contact/" class="main cta">Get a Free Quote</a>
             </div>
         </nav>
 
@@ -316,20 +316,12 @@ const sectors = await getCollection("sectors");
 
     header nav .cta {
         padding: clamp(0.8rem,3vmin,1.2rem) clamp(0.9rem, 3vmin, 1.5rem);
-        background-color: var(--highlight);
-        font-size: clamp(1.8rem,1vw,2rem);
-        font-weight: 500;
         border-radius: 0.4rem;
         height: min-content;
-        color: var(--light);
         position: sticky;
         bottom: 0;
         margin: 6rem 0 2rem;
-        text-align: center;
-        box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff;
         transition: filter 0.5s ease;
-		text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 38%);
-        border: 0.2rem solid var(--highlight);
     }
 
     header nav .cta:hover {
@@ -564,6 +556,15 @@ const sectors = await getCollection("sectors");
             align-items: center;
         }
 
+        .subnav:hover .subsets {
+            transition: opacity 0.2s ease, visibility 0.2s ease,
+                transform 0.2s ease;
+            opacity: 1;
+            visibility: visible;
+            z-index: 2;
+            transform: translate(0%, calc(100% - 1rem));
+        }
+
         .subsets {
             background-color: var(--light);
             padding: 3rem 4rem;
@@ -576,8 +577,7 @@ const sectors = await getCollection("sectors");
             transform: translate(0%, calc(100% - 2rem));
             box-shadow: 0 1rem 3rem -1rem rgb(248 248 255 / 40%);
             display: flex;
-            transition: opacity 0.3s 0.2s ease, visibility 0.3s 0.2s ease,
-                transform 0.3s 0.2s ease;
+            transition: opacity 0.2s 0.1s ease, visibility 0.2s 0.1s ease, transform 0.2s 0.1s ease;
             opacity: 0;
             visibility: hidden;
             border: 0.1rem solid var(--light-a);
@@ -614,15 +614,6 @@ const sectors = await getCollection("sectors");
         .subsets > div a:hover {
             background-color: var(--light-d);
             transition: background-color 0.1s ease;
-        }
-
-        .subnav:hover .subsets {
-            transition: opacity 0.2s 0.1s ease, visibility 0.2s 0.1s ease,
-                transform 0.2s 0.1s ease;
-            opacity: 1;
-            visibility: visible;
-            z-index: 2;
-            transform: translate(0%, calc(100% - 1rem));
         }
 
         .subsets > div {
