--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -6,14 +6,14 @@ import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import '../../styles/forms.css'
 
-const { description } = Astro.props;
-
 import { Schema } from "astro-seo-schema"
+
+import { JOBS_TITLE, JOBS_DESCRIPTION } from "../../consts";
 ---
 
 <html lang="en">
     <head>
-        <BaseHead title="Office Cleaning Jobs in London - The Clean Network" description="Looking for office cleaning jobs in London? Join The Clean Network, London's leading commercial cleaning company. Explore our job opportunities near you. Apply now!" />
+        <BaseHead title={JOBS_TITLE} description={JOBS_DESCRIPTION} />
     </head>
 
     <body>
