--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -18,8 +18,6 @@ const sectors = (await getCollection('sectors')).sort((a, b) => {
 
 const currentURL = new URL(Astro.request.url)
 
-const { description } = Astro.props;
-
 import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
@@ -30,11 +28,13 @@ import "../../styles/subpages.css"
 import "../../styles/collections.css"
 
 import { Schema } from "astro-seo-schema"
+
+import { SECTORS_TITLE, SECTORS_DESCRIPTION } from "../../consts";
 ---
 
 <html lang="en">
     <head>
-        <BaseHead title="Our Sectors · The Clean Network" description="Discover the range of commercial & office cleaning services offered by The Clean Network in London. Comprehensive, reliable, professional. Your sector, our expertise." />
+        <BaseHead title={SECTORS_TITLE} description={SECTORS_DESCRIPTION} />
     </head>
 
     <body>
@@ -72,7 +72,7 @@ import { Schema } from "astro-seo-schema"
     
                                                 <p class="description">{sectors.data.description}</p>
 
-                                                <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
+                                                <a href="/contact/" class="main cta" aria-label="Get a free quote for our cleaning sectors">Get a free quote</a>
                                             </div>
                                             
                                             <a href={`/sectors/${sectors.slug}`} class="image" aria-label={`Read more about ${sectors.data.title}`}  title={`Read more about ${sectors.data.title}`}>
