--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -264,6 +264,38 @@ noscript {
     margin-right: 0.6rem;
 }
 
+.main.cta {
+    font-size: clamp(1.5rem,4.2vmin,1.8rem);
+    background-color: var(--highlight);
+    color: var(--light);
+    font-weight: 500;
+    border: 0.1rem solid var(--light-d);
+    border: 0.2rem solid var(--highlight);
+    box-shadow: inset 0 -1.2rem 2rem -1.8rem #fff;
+    text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 38%);
+    transition: filter 0.3s ease;
+    -webkit-transition: filter 0.3s ease;
+    -moz-transition: filter 0.3s ease;
+    -ms-transition: filter 0.3s ease;
+    -o-transition: filter 0.3s ease;
+    text-align: center;
+}
+
+
+.main.cta:hover {
+    filter: brightness(1.1);
+    -webkit-filter: brightness(1.1);
+    transition: filter 0.1s ease;
+    -webkit-transition: filter 0.1s ease;
+    -moz-transition: filter 0.1s ease;
+    -ms-transition: filter 0.1s ease;
+    -o-transition: filter 0.1s ease;
+}
+
+.cta {
+    border-radius: 0.3rem;
+}
+
 .panel .image img {
     width: 100%;
     object-fit: cover;
