--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -10,12 +10,12 @@
     width: 100%;
     height: clamp(5rem,115vmin,62rem);
     max-height: 80vh;
-    background-position: bottom center;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-color: var(--light-d);
-    box-shadow: inset 0 -16rem 10rem -16rem var(--primary-b);
+    /* box-shadow: inset 0 -16rem 10rem -16rem var(--primary-b); */
 }
 
 .intro .content {
@@ -82,7 +82,7 @@ article {
     padding: clamp(3rem, 5vmin, 4rem) clamp(2.5rem, 6vmin, 5rem);
     box-sizing: border-box;
     border: 0.1rem solid var(--light-a);
-    box-shadow: 0 1rem 2rem -1rem var(--light-b);
+    /* box-shadow: 0 1rem 2rem -1rem var(--light-b); */
 }
 
 article ul, article ol {
@@ -118,31 +118,10 @@ article p strong, article p em {
 
 article .cta {
     display: block;
-    text-align: center;
     padding: 1.2rem;
-    background-color: var(--light-a);
-    color: var(--primary-a);
-    font-size: 2rem;
-    border-radius: 0.3rem;
     position: sticky;
     bottom: 1.5rem;
-    font-weight: 600;
-    border: 0.1rem solid var(--light-d);
     margin-top: 3rem;
-    transition: background-color 0.4s ease;
-    -webkit-transition: background-color 0.4s ease;
-    -moz-transition: background-color 0.4s ease;
-    -ms-transition: background-color 0.4s ease;
-    -o-transition: background-color 0.4s ease;
-}
-
-article .cta:hover {
-    background-color: var(--light-c);
-    transition: background-color 0.1s ease;
-    -webkit-transition: background-color 0.1s ease;
-    -moz-transition: background-color 0.1s ease;
-    -ms-transition: background-color 0.1s ease;
-    -o-transition: background-color 0.1s ease;
 }
 
 article a.back {
