--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -33,7 +33,7 @@ h2::after {
 }
 
 .panel {
-    border: 0.1rem solid var(--light-a);
+    border: 0.2rem solid var(--light-a);
     position: relative;
     scroll-margin-top: 20rem;
 }
@@ -48,7 +48,7 @@ h2::after {
 }
  
 .panel .content .description {
-    font-size: clamp(1.5rem,3.8vmin,1.8rem);
+    font-size: clamp(1.5rem,3.8vmin,1.9rem);
     color: var(--grey);
     line-height: 1.4;
     margin-bottom: 1rem;
@@ -139,20 +139,14 @@ h2::after {
     margin: 0.4rem 0 1.6rem;
 }
 
-.panel .quote {
-    font-size: clamp(1.4rem,4vw,1.8rem);
-    color: var(--dark-a);
-    font-weight: 600;
+.panel .main.cta {
     text-align: right;
     padding: clamp(0.9rem,2.5vw,1.4rem) 1.4rem;
-    border-radius: 0.4rem;
     position: absolute;
     left: 1.5rem;
     right: 1.5rem;
     bottom: 1.5rem;
     text-align: center;
-    border-top: 0.1rem solid var(--light-a);
-    background-color: rgb(248 248 255 / 75%);
     backdrop-filter: blur(0.3rem);
     z-index: 1;
 }
@@ -232,27 +226,22 @@ h2::after {
     }
 
     .panel .content {
-        max-width: clamp(40rem,30vw,95rem);
+        max-width: clamp(40rem,32vw,95rem);
         margin-inline: 4vw 6vw;
-        padding:clamp(3rem,12vmin,10rem) 0 clamp(3rem,12vmin,10rem);
+        padding: clamp(3rem,12vmin,9rem) 0 clamp(3rem,12vmin,9rem);
     }
 
     .heading_ctnr .content {
         text-align: center;
     }
     
-    .panel .quote {
+    .panel .main.cta {
         max-width: calc(clamp(40rem,30vw,95rem) + 10vw);
         box-sizing: border-box;
         backdrop-filter: unset;
-        transition: background-color 0.3s ease;
         right: 3.5rem;
         left: unset;
         bottom: 2.5rem;
-        background-color: var(--light-a);
-        border-radius: 0.6rem;
-        border: 0.2rem solid var(--light);
-        color: var(--primary-a);
     }
 
     .panel .quote:hover {
